objects/Client_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Budget_Revenues_Count__c</fullName>
        <label>Budget Revenues Count</label>
        <summaryForeignKey>Budget_Revenue__c.Client_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Client_Overview__c</fullName>
        <label>Client Overview</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Country_Presence_Count__c</fullName>
        <label>Country Presence Count</label>
        <summaryForeignKey>Country_Presence__c.Client_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country_Presence_Image_ID__c</fullName>
        <label>Country Presence Image ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coverage_Banker__c</fullName>
        <formula>Relationship__r.Owner.FirstName &amp;&quot; &quot;&amp; Relationship__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coverage Banker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DG_Last_Pulled_From_SPEAR__c</fullName>
        <description>This is the last date and time that the DG field was refreshed from the SPEAR service</description>
        <inlineHelpText>This is the last date and time that the DG field was refreshed from the SPEAR service</inlineHelpText>
        <label>Last Refresh Date:</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DG__c</fullName>
        <label>DG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>- Not Available -</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expansion_Policy__c</fullName>
        <label>Credit Exposure Policy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Expand</fullName>
                </value>
                <value>
                    <fullName>Maintain</fullName>
                </value>
                <value>
                    <fullName>Reduce</fullName>
                </value>
                <value>
                    <fullName>Exit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FAIS_Status_Comment__c</fullName>
        <label>FAIS Status Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FAIS_Status__c</fullName>
        <label>FAIS Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Applicable</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinancialCommentary__c</fullName>
        <description>Financial Commentary on the client plan provides insight into the financial information</description>
        <inlineHelpText>Financial Commentary on the client plan provides insight into the financial information</inlineHelpText>
        <label>Financial Commentary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Financial_Information_Image_ID__c</fullName>
        <label>Financial Information Image ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Year_End__c</fullName>
        <label>Financial Year End</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Structure_Image_ID__c</fullName>
        <label>Group Structure Image ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LGD__c</fullName>
        <label>LGD (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_Review_Date__c</fullName>
        <label>Last Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Audited_Financial_Statement__c</fullName>
        <description>Date of latest audited financial statement on file</description>
        <label>Latest Audited Financial Statement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunities_Count__c</fullName>
        <description>Counts the amount of opportunities associated to a client plan from the Client Score entity</description>
        <label>Opportunities Count</label>
        <summaryFilterItems>
            <field>Client_Score__c.Score_Type__c</field>
            <operation>equals</operation>
            <value>Opportunity</value>
        </summaryFilterItems>
        <summaryForeignKey>Client_Score__c.Client_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Org_Structure_Image_ID__c</fullName>
        <label>Org Structure Image ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Structure_Items_Count__c</fullName>
        <label>Org Structure Items Count</label>
        <summaryForeignKey>Organisation_Structure_Item__c.Client_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Override_Pull_DG_From_SPEAR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether we are pulling the DG from SPEAR or not</description>
        <inlineHelpText>Override retrieving DG from SPEAR?</inlineHelpText>
        <label>Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Potential_Opportunities_Count__c</fullName>
        <label>Potential Opportunities Count</label>
        <summaryForeignKey>Potential_Opportunity__c.Client_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <description>Holds the current progress of the client plan</description>
        <label>Progress</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Plans</relationshipLabel>
        <relationshipName>ClientPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationships_Count__c</fullName>
        <label>Relationships Count</label>
        <summaryForeignKey>Client_Plan_Relationship__c.Client_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>RoRWA_Existing__c</fullName>
        <label>Relationship RoRWA (Existing)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SDS__c</fullName>
        <description>SDS used to pull from various integration systems eg. SPEAR</description>
        <externalId>true</externalId>
        <inlineHelpText>SDS used to pull from various integration systems eg. SPEAR</inlineHelpText>
        <label>Source SDS Id for DG retrieval</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector_Overview__c</fullName>
        <label>Sector Overview</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Growth client</fullName>
                </value>
                <value>
                    <fullName>Maintain client</fullName>
                </value>
                <value>
                    <fullName>Exit client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategies_Count__c</fullName>
        <label>Strategies Count</label>
        <summaryForeignKey>Client_Plan_Strategy__c.Client_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Strengths_Count__c</fullName>
        <description>Counts the number of strengths in the client plan</description>
        <label>Strengths Count</label>
        <summaryFilterItems>
            <field>Client_Score__c.Score_Type__c</field>
            <operation>equals</operation>
            <value>Strength</value>
        </summaryFilterItems>
        <summaryForeignKey>Client_Score__c.Client_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TFL__c</fullName>
        <label>TFL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Threat_Count__c</fullName>
        <description>Counts the amount of threats associated to a client plan</description>
        <label>Threat Count</label>
        <summaryFilterItems>
            <field>Client_Score__c.Score_Type__c</field>
            <operation>equals</operation>
            <value>Threat</value>
        </summaryFilterItems>
        <summaryForeignKey>Client_Score__c.Client_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Weakness_Count__c</fullName>
        <description>Counts the amount of weaknesses associated to a given client plan</description>
        <label>Weakness Count</label>
        <summaryFilterItems>
            <field>Client_Score__c.Score_Type__c</field>
            <operation>equals</operation>
            <value>Weakness</value>
        </summaryFilterItems>
        <summaryForeignKey>Client_Score__c.Client_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Client Plan</label>
    <nameField>
        <displayFormat>PL{00000}</displayFormat>
        <label>Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Client_Plan_Manager__c</fullName>
        <label>Client Plan Manager</label>
    </sharingReasons>
    <validationRules>
        <fullName>Not_in_future</fullName>
        <active>true</active>
        <errorConditionFormula>Latest_Audited_Financial_Statement__c &gt; TODAY()</errorConditionFormula>
        <errorMessage>Date can not be in future.</errorMessage>
    </validationRules>
</CustomObject>